# python-chessx

./: README.md  explain.py  heuristic.py  psqt.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: tests.yml
heuristic/: psqt.py
nb-demo/: features.ipynb  material.ipynb  xai-chess-try.ipynb
src/chessx/: heuristic.py  psqt.py
tests/: test.py  test_psqt.py
